marta validacion de correo

--- a/home-page.html
+++ b/home-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,17 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <title>Animation Records</title>
 </head>
+
 <body>
     <header>
         <div id="container">
             <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
             <h1> Animation Records</h1>
-         <div id="menu">
-            <a href="/home-page.html"><img src="/assecs/house.png"></a>
-            <a href="/galery-page.html"><img src="/assecs/galeria.jpg"></a>
-            <img id="cart" src="/assecs/cart.png" alt="carrito">
-         </div>
+            <div id="menu">
+                <a href="/home-page.html"><img src="/assecs/house.png"></a>
+                <a href="/galery-page.html"><img src="/assecs/galeria.jpg"></a>
+                <img id="cart" src="/assecs/cart.png" alt="carrito">
+            </div>
         </div>
     </header>
 
@@ -29,38 +31,51 @@
     <section id="categories">
         <h2>Categorías</h2>
         <div class="products">
-            <div class="pic"><a href="/galery-page.html"><img class="photos" src="/assecs/stich1.webp" alt="Foto peluche Stich"></a>
-               <div class="name"><p>Peluches</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+            <div class="pic"><a href="/galery-page.html"><img class="photos" src="/assecs/stich1.webp"
+                        alt="Foto peluche Stich"></a>
+                <div class="name">
+                    <p>Peluches</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/taza.jpg" alt="Foto taza Marie">
-                <div class="name"><p>Tazas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+                <div class="name">
+                    <p>Tazas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/mouse.webp" alt="Foto toalla Mickey">
-                <div class="name"><p>Moda</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+                <div class="name">
+                    <p>Moda</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
         </div>
         <div class="products">
             <div class="pic"><img class="photos" src="/assecs/poster.webp" alt="Foto poster castillo Disney">
-                <div class="name"><p>Poster y Litografía</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+                <div class="name">
+                    <p>Poster y Litografía</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/pelis.webp" alt="Foto caratula pelicula La sirenita">
-                <div class="name"><p>Películas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+                <div class="name">
+                    <p>Películas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/papeleria.webp" alt="Foto productos papeleria">
-                <div class="name"><p>Papelería</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito"></div>
+                <div class="name">
+                    <p>Papelería</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                </div>
             </div>
         </div>
     </section>
 
-
     <div class="row">
         <label class="required" for="email"> Suscribirse a la newletter:</label><br />
-            <input type="text" name="correo" id="correo" placeholder="email@hotmail.com">
-            <input type="submit" value="suscripcion" onClick="pruebaemail(correo.value);">         
+        <input type="text" name="correo" id="correo" placeholder="email@hotmail.com">
+        <input type="submit" value="suscripcion" onClick="pruebaemail(correo.value);">
     </div>
     <footer>
         <p>&#169Copyright2022 Animation Records</p>
     </footer>
-   <script src="/app.js"></script>
+    <script src="/app.js"></script>
 </body>
+
 </html>
