--- a/home-page.html
+++ b/home-page.html
@@ -70,7 +70,7 @@
     <div class="row">
         <label class="required" for="email"> Suscribirse a la newletter:</label><br />
         <input type="text" name="correo" id="correo" placeholder="email@hotmail.com">
-        <input type="submit" value="suscripcion" onClick="pruebaemail(correo.value);">
+        <input type="submit" value="suscripcion" onClick="email(correo.value);">
     </div>
     <footer>
         <p>&#169Copyright2022 Animation Records</p>
