marta acabado home

--- a/home-page.html
+++ b/home-page.html
@@ -16,11 +16,11 @@
             <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
             <h1> Animation Records</h1>
             <div id="menu">
-                <a href="/home-page.html"><img src="/assecs/house.png"></a>
-                <a href="/galery-page.html"><img src="/assecs/galeria.jpg"></a>
-                <img id="cart" src="/assecs/cart.png" alt="carrito">
+                <a href="/home-page.html"><img class="navBarItem" src="/assecs/house.png"></a>
+                <a href="/galery-page.html"><img class="navBarItem" src="/galery-page.html"></a>
+                <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
             </div>
-        </div>
+        </div> 
     </header>
 
 
@@ -34,34 +34,34 @@
             <div class="pic"><a href="/galery-page.html"><img class="photos" src="/assecs/stich1.webp"
                         alt="Foto peluche Stich"></a>
                 <div class="name">
-                    <p>Peluches</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Peluches</p>
                 </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/taza.jpg" alt="Foto taza Marie">
                 <div class="name">
-                    <p>Tazas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Tazas</p>
                 </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/mouse.webp" alt="Foto toalla Mickey">
                 <div class="name">
-                    <p>Moda</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Moda</p>
                 </div>
             </div>
         </div>
         <div class="products">
             <div class="pic"><img class="photos" src="/assecs/poster.webp" alt="Foto poster castillo Disney">
                 <div class="name">
-                    <p>Poster y Litografía</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Poster y Litografía</p>
                 </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/pelis.webp" alt="Foto caratula pelicula La sirenita">
                 <div class="name">
-                    <p>Películas</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Películas</p>
                 </div>
             </div>
             <div class="pic"><img class="photos" src="/assecs/papeleria.webp" alt="Foto productos papeleria">
                 <div class="name">
-                    <p>Papelería</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Papelería</p>
                 </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
 
     <div class="row">
         <label class="required" for="email"> Suscribirse a la newletter:</label><br />
-        <input type="text" name="correo" id="correo" placeholder="email@hotmail.com">
-        <input type="submit" value="suscripcion" onClick="email(correo.value);">
+        <input class="buton" type="text" name="correo" id="correo" placeholder="email@hotmail.com">
+        <input  type="submit" value="suscripcion" onClick="email(correo.value);">
     </div>
     <footer>
         <p>&#169Copyright2022 Animation Records</p>
