marta actualizacion de icono galeria y borrado de formulario en galery page

--- a/home-page.html
+++ b/home-page.html
@@ -17,7 +17,7 @@
             <h1> Animation Records</h1>
             <div id="menu">
                 <a href="/home-page.html"><img class="navBarItem" src="/assecs/house.png"></a>
-                <a href="/galery-page.html"><img class="navBarItem" src="/galery-page.html"></a>
+                <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
                 <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
             </div>
         </div> 
