--- a/galery-page.html
+++ b/galery-page.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="products">
-            <div class="picture"><img class="product-photos" src="/assecs/stich1.webp" alt="Foto peluche Stitch">
+            <div class="picture"><a href="product-detail.html"><img class="product-photos" src="/assecs/stich1.webp" alt="Foto peluche Stitch"></a>
                 <div class="name-product">
                     <p>Stitch</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
                 </div>
