--- a/product-detail.html
+++ b/product-detail.html
@@ -13,16 +13,16 @@
 
 <body>
     <header>
-        <div id="container">
-            <img id="logo" src="/assecs/logoAR.jpg" alt="Logotipo Animation Records">
-            <h1> Animation Records</h1>
-            <div id="menu">
-                <img class="navbarItem" src="/assecs/house.png" alt="home">
-                <img class="navbarItem" src="/assecs/galeria.jpg" alt="galeria">
-                <img class="navbarItem" src="/assecs/cart.png" alt="carrito">
-            </div>
+    <div id="container">
+        <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
+        <h1> Animation Records</h1>
+        <div id="menu">
+            <a href="/home-page.html"><img class="navBarItem" src="/assecs/house.png"></a>
+            <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
+            <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
         </div>
-    </header>
+    </div> 
+</header>
 
 
 
