--- a/galery-page.html
+++ b/galery-page.html
@@ -15,7 +15,7 @@
         <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
         <h1> Animation Records</h1>
         <div id="menu">
-            <a href="/home-page.html"><img class="navBarItem" src="/assecs/house.png"></a>
+            <a href="./index.html"><img class="navBarItem" src="/assecs/house.png"></a>
             <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
             <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
         </div>
