--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <title>Animation Records</title>
 </head>
@@ -16,8 +16,8 @@
             <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
             <h1> Animation Records</h1>
             <div id="menu">
-                <a href="/home-page.html"><img class="navBarItem" src="/assecs/house.png"></a>
-                <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
+                <a href="./index.html"><img class="navBarItem" src="/assecs/house.png"></a>
+                <a href="./galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
                 <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
             </div>
         </div> 
@@ -75,7 +75,7 @@
     <footer>
         <p>&#169Copyright2022 Animation Records</p>
     </footer>
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
