ultimo retoque giaco

--- a/index.html
+++ b/index.html
@@ -16,50 +16,50 @@
             <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
             <h1> Animation Records</h1>
             <div id="menu">
-                <a href="./index.html"><img class="navBarItem" src="/assecs/house.png"></a>
-                <a href="./galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
-                <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
+                <a href="./index.html"><img class="navBarItem" src="./assecs/house.png"></a>
+                <a href="./galery-page.html"><img class="navBarItem" src="./assecs/galeria.png"></a>
+                <img class="navBarItem" src="./assecs/cart.png" alt="carrito">
             </div>
         </div> 
     </header>
 
 
     <div class="divbanner">
-        <img class="banner" src="/assecs/banner-video-portada.webp" alt="banner">
+        <img class="banner" src="./assecs/banner-video-portada.webp" alt="banner">
     </div>
 
     <section id="categories">
         <h2>Categorías</h2>
         <div class="products">
-            <div class="pic"><a href="/galery-page.html"><img class="photos" src="/assecs/stich1.webp"
+            <div class="pic"><a href="./galery-page.html"><img class="photos" src="./assecs/stich1.webp"
                         alt="Foto peluche Stich"></a>
                 <div class="name">
                     <p>Peluches</p>
                 </div>
             </div>
-            <div class="pic"><img class="photos" src="/assecs/taza.jpg" alt="Foto taza Marie">
+            <div class="pic"><img class="photos" src="./assecs/taza.jpg" alt="Foto taza Marie">
                 <div class="name">
                     <p>Tazas</p>
                 </div>
             </div>
-            <div class="pic"><img class="photos" src="/assecs/mouse.webp" alt="Foto toalla Mickey">
+            <div class="pic"><img class="photos" src="./assecs/mouse.webp" alt="Foto toalla Mickey">
                 <div class="name">
                     <p>Moda</p>
                 </div>
             </div>
         </div>
         <div class="products">
-            <div class="pic"><img class="photos" src="/assecs/poster.webp" alt="Foto poster castillo Disney">
+            <div class="pic"><img class="photos" src="./assecs/poster.webp" alt="Foto poster castillo Disney">
                 <div class="name">
                     <p>Poster y Litografía</p>
                 </div>
             </div>
-            <div class="pic"><img class="photos" src="/assecs/pelis.webp" alt="Foto caratula pelicula La sirenita">
+            <div class="pic"><img class="photos" src="./assecs/pelis.webp" alt="Foto caratula pelicula La sirenita">
                 <div class="name">
                     <p>Películas</p>
                 </div>
             </div>
-            <div class="pic"><img class="photos" src="/assecs/papeleria.webp" alt="Foto productos papeleria">
+            <div class="pic"><img class="photos" src="./assecs/papeleria.webp" alt="Foto productos papeleria">
                 <div class="name">
                     <p>Papelería</p>
                 </div>
