ultimo retoque giaco

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="container">
-            <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
+            <img id="logo" src="./assecs/logoAR.jpg" alt="Logo Animation Records">
             <h1> Animation Records</h1>
             <div id="menu">
                 <a href="./index.html"><img class="navBarItem" src="./assecs/house.png"></a>
