--- a/product-detail.html
+++ b/product-detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Detail</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style3.css">
+    <link rel="stylesheet" href="./style3.css">
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
 </head>
@@ -14,12 +14,12 @@
 <body>
     <header>
     <div id="container">
-        <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
+        <img id="logo" src="./assecs/logoAR.jpg" alt="Logo Animation Records">
         <h1> Animation Records</h1>
         <div id="menu">
-            <a href="./index.html" class="navBarItem" src="/assecs/house.png"></a>
-            <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
-            <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
+            <a href="./index.html" class="navBarItem" src="./assecs/house.png"></a>
+            <a href="./galery-page.html"><img class="navBarItem" src="./assecs/galeria.png"></a>
+            <img class="navBarItem" src="./assecs/cart.png" alt="carrito">
         </div>
     </div> 
 </header>
@@ -29,7 +29,7 @@
 
 
     <div class="divbanner">
-        <img class="banner" src="/assecs/banner-video-portada.webp" alt="banner">
+        <img class="banner" src="./assecs/banner-video-portada.webp" alt="banner">
     </div>
 
 
@@ -42,7 +42,7 @@
                 <section class="container">
                     <div class="row">
                         <div class="d-flex flex flex">
-                            <div class="p-2 boxstitch"><img src="/assecs/stich1.webp" class="imgproduct"></div>
+                            <div class="p-2 boxstitch"><img src="./assecs/stich1.webp" class="imgproduct"></div>
 
                             <div class="p-3">
                                 <h2>Peluche Stich</h2>
@@ -76,18 +76,18 @@
     <h3 class="box-title mt-5">También podría interesarte...</h3>
     <div class="grid">
         <div class="item">
-            <div class="content"><img id="galery1" src="/assecs/CAMI.jpg" alt="Camiseta Stitch">
+            <div class="content"><img id="galery1" src="./assecs/CAMI.jpg" alt="Camiseta Stitch">
             </div>
         </div>
         <div class="item">
-            <div class="content"> <img id="galery2" src="/assecs/TAZAAA.jpg" alt="Taza Stitch">
+            <div class="content"> <img id="galery2" src="./assecs/TAZAAA.jpg" alt="Taza Stitch">
             </div>
         </div>
         <div class="item">
-            <div class="content"> <img id="galery3" src="/assecs/LILO.jpg" alt="Pelicula Stitch"></div>
+            <div class="content"> <img id="galery3" src="./assecs/LILO.jpg" alt="Pelicula Stitch"></div>
         </div>
         <div class="item">
-            <div class="content"><img id="galery4" src="/assecs/MOCHILAW.jpg" alt=" Mochila Stitch"></div>
+            <div class="content"><img id="galery4" src="./assecs/MOCHILAW.jpg" alt=" Mochila Stitch"></div>
         </div>
     </div>
 
