--- a/galery-page.html
+++ b/galery-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style2.css" rel="stylesheet">
+    <link href="./style2.css" rel="stylesheet">
     <title>Animation Records</title>
 </head>
 
@@ -12,104 +12,104 @@
     <!---HEADER---------------------------------------------------------------------->
     <header>
     <div id="container">
-        <img id="logo" src="/assecs/logoAR.jpg" alt="Logo Animation Records">
+        <img id="logo" src="./assecs/logoAR.jpg" alt="Logo Animation Records">
         <h1> Animation Records</h1>
         <div id="menu">
-            <a href="./index.html"><img class="navBarItem" src="/assecs/house.png"></a>
-            <a href="/galery-page.html"><img class="navBarItem" src="/assecs/galeria.png"></a>
+            <a href="./index.html"><img class="navBarItem" src="./assecs/house.png"></a>
+            <a href="./galery-page.html"><img class="navBarItem" src="./assecs/galeria.png"></a>
             <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
         </div>
     </div>
     </header>
     <!--BANNER---------------------------------------------------------------------->
     <div class="divbanner">
-        <img class="banner" src="/assecs/banner-video-portada.webp" alt="banner">
+        <img class="banner" src="./assecs/banner-video-portada.webp" alt="banner">
     </div>
     <!--SECTION--------------------------------------------------------------------->
     <section id="gallery">
         <h2 id="gallery-h2">Peluches</h2>
 
         <div class="products">
-            <div class="picture"><img class="product-photos" src="/assecs/412302384915-1 (1).webp"
+            <div class="picture"><img class="product-photos" src="./assecs/412302384915-1 (1).webp"
                     alt="Foto peluche Winny">
                 <div class="name-product">
-                    <p>Winny</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Winny</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/mickey1.webp" alt="Foto peluche Mickey">
+            <div class="picture"><img class="product-photos" src="./assecs/mickey1.webp" alt="Foto peluche Mickey">
                 <div class="name-product">
-                    <p>Mickey</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Mickey</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/dumbo.webp" alt="Foto peluche Dumbo">
+            <div class="picture"><img class="product-photos" src="./assecs/dumbo.webp" alt="Foto peluche Dumbo">
                 <div class="name-product">
-                    <p>Dumbo</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Dumbo</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/412312715594.webp" alt="Foto peluche Cookie">
+            <div class="picture"><img class="product-photos" src="./assecs/412312715594.webp" alt="Foto peluche Cookie">
                 <div class="name-product">
-                    <p>Cookie</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Cookie</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/412319119739.webp" alt="Foto peluche Minnie">
+            <div class="picture"><img class="product-photos" src="./assecs/412319119739.webp" alt="Foto peluche Minnie">
                 <div class="name-product">
-                    <p>Minnie</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Minnie</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
         </div>
         <div class="products">
-            <div class="picture"><a href="product-detail.html"><img class="product-photos" src="/assecs/stich1.webp" alt="Foto peluche Stitch"></a>
+            <div class="picture"><a href="product-detail.html"><img class="product-photos" src="./assecs/stich1.webp" alt="Foto peluche Stitch"></a>
                 <div class="name-product">
-                    <p>Stitch</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Stitch</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/simba.webp" alt="Foto peluche Simba">
+            <div class="picture"><img class="product-photos" src="./assecs/simba.webp" alt="Foto peluche Simba">
                 <div class="name-product">
-                    <p>Simba</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Simba</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/donald.webp" alt="Foto peluche Donald">
+            <div class="picture"><img class="product-photos" src="./assecs/donald.webp" alt="Foto peluche Donald">
                 <div class="name-product">
-                    <p>Donald</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Donald</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/412351626189.webp" alt="Foto peluche Tortuga">
+            <div class="picture"><img class="product-photos" src="./assecs/412351626189.webp" alt="Foto peluche Tortuga">
                 <div class="name-product">
-                    <p>Tortuga</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Tortuga</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/pluto.webp" alt="Foto peluche Pluto">
+            <div class="picture"><img class="product-photos" src="./assecs/pluto.webp" alt="Foto peluche Pluto">
                 <div class="name-product">
-                    <p>Pluto</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Pluto</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
         </div>
 
         <div class="products">
-            <div class="picture"><img class="product-photos" src="/assecs/marie.webp" alt="Foto peluche Marie">
+            <div class="picture"><img class="product-photos" src="./assecs/marie.webp" alt="Foto peluche Marie">
                 <div class="name-product">
-                    <p>Marie</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Marie</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/donkey.webp" alt="Foto peluche Donkey">
+            <div class="picture"><img class="product-photos" src="./assecs/donkey.webp" alt="Foto peluche Donkey">
                 <div class="name-product">
-                    <p>Donkey</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Donkey</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/grogu.webp" alt="Foto peluche Yoda">
+            <div class="picture"><img class="product-photos" src="./assecs/grogu.webp" alt="Foto peluche Yoda">
                 <div class="name-product">
-                    <p>Yoda</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Yoda</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/412026414493.webp" alt="Foto peluche Gato">
+            <div class="picture"><img class="product-photos" src="./assecs/412026414493.webp" alt="Foto peluche Gato">
                 <div class="name-product">
-                    <p>Gato</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Gato</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
-            <div class="picture"><img class="product-photos" src="/assecs/chipbellaybestia.webp"
+            <div class="picture"><img class="product-photos" src="./assecs/chipbellaybestia.webp"
                     alt="Foto peluche Chip">
                 <div class="name-product">
-                    <p>Chip</p><img class="icon" src="/assecs/shopping-cart.png" alt="icono carrito">
+                    <p>Chip</p><img class="icon" src="./assecs/shopping-cart.png" alt="icono carrito">
                 </div>
             </div>
         </div>
