ultimo retoque giaco

--- a/galery-page.html
+++ b/galery-page.html
@@ -17,7 +17,7 @@
         <div id="menu">
             <a href="./index.html"><img class="navBarItem" src="./assecs/house.png"></a>
             <a href="./galery-page.html"><img class="navBarItem" src="./assecs/galeria.png"></a>
-            <img class="navBarItem" src="/assecs/cart.png" alt="carrito">
+            <img class="navBarItem" src="./assecs/cart.png" alt="carrito">
         </div>
     </div>
     </header>
